src/builder/tests/update/snapshots/ciboulette2pg__builder__tests__update__update_main__relationship_internal_force_null.snap
---
source: src/builder/tests/update/update_main.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_update_0" AS (
  UPDATE
    "public"."peoples"
  SET
    "first-name" = $1,
    "last-name" = $2,
    "favorite_color" = $3
  WHERE
    "public"."peoples"."id" = $4 RETURNING *
),
"cte_peoples_data_1" AS (
  SELECT
    "cte_peoples_update_0"."id" :: TEXT AS "id",
    "cte_peoples_update_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $5 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $6,
      "cte_peoples_update_0"."age",
      $7,
      "cte_peoples_update_0"."first-name",
      $8,
      "cte_peoples_update_0"."gender",
      $9,
      "cte_peoples_update_0"."last-name",
      $10,
      "cte_peoples_update_0"."twitter"
    ) AS "data",
    "cte_peoples_update_0"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_update_0"
) (
  SELECT
    "cte_peoples_data_1"."id",
    "cte_peoples_data_1"."type",
    "cte_peoples_data_1"."data",
    "cte_peoples_data_1"."related_type",
    "cte_peoples_data_1"."related_id"
  FROM
    "cte_peoples_data_1"
);
